--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <!-- Slides -->
                 <div class="swiper-slide slider">
                     <div class="slide-particles"></div>
-                    <div class="slider-container" style="background-image: url('Images/Rectangle\ 36.png');">
+                    <div class="slider-container" style="background-image: url('Images/Rectangle\ 36.webp');">
                         <div class="slider-content">
                             <h2 class="slider-title">Защита от DDOS атак</h2>
                             <p class="slider-description">
@@ -197,7 +197,7 @@
                 </div>
                 <div class="swiper-slide slider_Two">
                     <div class="slide-particles"></div>
-                    <div class="slider-container" style="background-image: url('Images/Rectangle\ 41.png');">
+                    <div class="slider-container" style="background-image: url('Images/Rectangle\ 41.webp');">
                         <div class="slider-content">
                             <h2 class="slider-title">Облачные Серверы VDS</h2>
                             <p class="slider-description">
@@ -208,7 +208,7 @@
                 </div>
                 <div class="swiper-slide slider_Three">
                     <div class="slide-particles"></div>
-                    <div class="slider-container" style="background-image: url('Images/Rectangle\ 40.png');">
+                    <div class="slider-container" style="background-image: url('Images/Rectangle\ 40.webp');">
                         <div class="slider-content">
                             <h2 class="slider-title">HIGH-CPU Серверы</h2>
                             <p class="slider-description">
