--- a/cabinet.html
+++ b/cabinet.html
@@ -325,7 +325,7 @@
         </div>
     </div>
 
-    <script src="js/cabinet.js"></script>
+    <script src="./scripts/cabinet.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/header.js"></script>
 </body>
