--- a/storage_vps.html
+++ b/storage_vps.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/tarifs.css">
     <link rel="stylesheet" href="./styles/storage-vps-animations.css">
+    <link rel="stylesheet" href="./styles/storage_vps.css">
 </head>
 
 <body>
@@ -192,10 +193,10 @@
                         </div>
                         <div class="tariff-specs">
                             <div class="spec-item">
-                                <span>Облачные серверы с <br> вместительным HDD <br> хранилищем в надёжном Raid <br>  по технологии ZFS
-                                    Raid, на <br> базе процессора Intel Xeon <br> 8260 Platinum до 3.9 ГГц. <br> Отличное решение для <br> 
-                                    безопасного хранения <br> больших объёмов данных, <br>  медиафайлов, резервных <br> копий по
-                                    настоящему ценных <br> проектов. Вложенная <br> виртуализация включена.</span>
+                                <span>Облачные серверы с  вместительным HDD  хранилищем в надёжном Raid <br>  по технологии ZFS
+                                    Raid, на > базе процессора Intel Xeon  8260 Platinum до 3.9 ГГц. <br> Отличное решение для  
+                                    безопасного хранения  больших объёмов данных,   медиафайлов, <br> резервных  копий по
+                                    настоящему ценных  проектов. Вложенная  виртуализация включена.</span>
 
                             </div>
                           
