--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
 
                 <img src="./Images/cloud-video-poster.webp" 
                     alt="Cloud Technology" 
-                    loading="lazy"
-                    width="1920"
+                    width="1920" 
                     height="1080"
                     fetchpriority="high"
                     class="mobile-hero-background"
-                    decoding="async">
+                    decoding="async"
+                    style="content-visibility: auto;">
                 <div class="video-overlay"></div>
             </div>
 
