fixed a lot of things

--- a/dedicated-servers.html
+++ b/dedicated-servers.html
@@ -207,7 +207,7 @@
                     </div>
 
                     <div class="tariff-plans">
-                        <div class="plan" data-plan="ALB-1">
+                        <div class="plan animate-on-scroll" data-plan="ALB-1">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -224,7 +224,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-2">
+                        <div class="plan animate-on-scroll" data-plan="ALB-2">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -237,12 +237,11 @@
                                 </div>
                             </div>
                             <div class="plan-price">
-
                                 <div class="price-per-month2">€70.11<span>/месяц</span></div>
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-3">
+                        <div class="plan animate-on-scroll" data-plan="ALB-3">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -251,17 +250,15 @@
                                     <span>8 cores</span>
                                     <span>64 GB RAM</span>
                                     <span>2x1.0 TB NVMe</span>
-                                    <span>1 Gbit/s
-                                    </span>
+                                    <span>1 Gbit/s</span>
                                 </div>
                             </div>
                             <div class="plan-price">
-
                                 <div class="price-per-month2">€100.18<span>/месяц</span></div>
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-4">
+                        <div class="plan animate-on-scroll" data-plan="ALB-4">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -274,12 +271,11 @@
                                 </div>
                             </div>
                             <div class="plan-price">
-
                                 <div class="price-per-month2">€165.36<span>/месяц</span></div>
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-5">
+                        <div class="plan animate-on-scroll" data-plan="ALB-5">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -292,7 +288,6 @@
                                 </div>
                             </div>
                             <div class="plan-price">
-
                                 <div class="price-per-month2">€300.72<span>/месяц</span></div>
                             </div>
                         </div>
@@ -367,14 +362,14 @@
             <h2 class="features-title">почему наши серверы?</h2>
 
             <div class="features-grid">
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 67.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 67.png');">
                     <div class="feature-content">
                         <h3>ddos-защита</h3>
                         <p>до 2 Тбит/с трафика очистки, до 600 Гбит/с тонкой фильтрации. Защита включена в стоимость и
                             работает постоянно</p>
                     </div>
                 </div>
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 68.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 68.png');">
                     <div class="feature-content">
                         <h3>большой выбор</h3>
                         <p>мы предоставляем серверы в разных локациях: бюджетные и мощные конфигурации ждут вас в России
@@ -382,7 +377,7 @@
                     </div>
                 </div>
 
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 70.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 70.png');">
                     <div class="feature-content">
                         <h3>простое управление и API</h3>
                         <p>создание и работа с серверами в личном кабинете. Автоматизация управления с помощью REST API
@@ -395,7 +390,7 @@
         <section class="faq-section">
             <h2 class="faq-title">вопросы, ответы</h2>
             <div class="faq-container">
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Что такое выделенный сервер?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -414,7 +409,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Какая используется виртуализация?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -427,7 +422,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Можно ли собрать свою конфигурацию сервера?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -441,7 +436,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Есть ли DDoS-защита?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -519,55 +514,56 @@
     <script src="scripts/main.js"></script>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/dedicated-servers-animations.js"></script>
+    <script src="./scripts/scrollAnim.js"></script>
 
-    <div class="modal" id="loginModal">
+    <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-left">
-                <img src="Images/logo.svg" alt="Logo" class="modal-logo">
-                <h2>Login System</h2>
-                <p>Login into your Account</p>
+                <img src="./Images/logo.svg" alt="Logo" class="modal-logo">
+                <h2>Система входа</h2>
+                <p>Войдите в свой аккаунт</p>
             </div>
             <div class="modal-right">
                 <div class="modal-header">
-                    <h2>Login Account</h2>
-                    <p>Sign in to continue your progress</p>
+                    <h2>Вход в аккаунт</h2>
+                    <p>Войдите в систему, чтобы продолжить</p>
                     <button class="modal-close">&times;</button>
                 </div>
                 <form class="modal-form">
                     <div class="form-group">
-                        <label for="studentId">Login</label>
+                        <label for="studentId">Логин</label>
                         <input type="text" id="studentId" name="studentId" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password">Пароль</label>
                         <input type="password" id="password" name="password" required>
                         <div class="password-toggle">
                             <input type="checkbox" id="showPassword">
-                            <label for="showPassword">Show password</label>
+                            <label for="showPassword">Показать пароль</label>
                         </div>
                     </div>
-                    <button type="submit" class="sign-in-btn">Sign in</button>
+                    <button type="submit" class="sign-in-btn">Войти</button>
                 </form>
             </div>
         </div>
     </div>
 
-    <div class="modal" id="registerModal">
+    <div id="registerModal" class="modal">
         <div class="modal-content">
             <div class="modal-left">
-                <img src="Images/logo.svg" alt="Logo" class="modal-logo">
-                <h2>Registration System</h2>
-                <p>Register your Account</p>
+                <img src="./Images/logo.svg" alt="Logo" class="modal-logo">
+                <h2>Система регистрации</h2>
+                <p>Зарегистрируйте свой аккаунт</p>
             </div>
             <div class="modal-right">
                 <div class="modal-header">
-                    <h2>Create Account</h2>
-                    <p>Fill in your details to get started</p>
+                    <h2>Создайте свой аккаунт</h2>
+                    <p>Введите свои данные, чтобы начать</p>
                     <button class="modal-close">&times;</button>
                 </div>
                 <form class="modal-form">
                     <div class="form-group">
-                        <label for="regStudentId">Username</label>
+                        <label for="regStudentId">Имя пользователя</label>
                         <input type="text" id="regStudentId" name="regStudentId" required>
                     </div>
                     <div class="form-group">
@@ -575,14 +571,14 @@
                         <input type="email" id="regEmail" name="regEmail" required>
                     </div>
                     <div class="form-group">
-                        <label for="regPassword">Password</label>
+                        <label for="regPassword">Пароль</label>
                         <input type="password" id="regPassword" name="regPassword" required>
                         <div class="password-toggle">
                             <input type="checkbox" id="showRegPassword">
-                            <label for="showRegPassword">Show password</label>
+                            <label for="showRegPassword">Показать пароль</label>
                         </div>
                     </div>
-                    <button type="submit" class="sign-in-btn">Create Account</button>
+                    <button type="submit" class="sign-in-btn">Создать аккаунт</button>
                 </form>
             </div>
         </div>
