--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <section class="services-overview">
             <div class="service-card" style="background-image: url('./Images/cloudhosting.png');">
                 <div>
-                    <h3 class="service-title">Облачные серверы</h3>
+                    <h3 class="service-title">Виртуальные серверы</h3>
                     <p class="service-description">Виртуальные серверы на SSD</p>
                 </div>
                 <div class="service-tags">
@@ -260,7 +260,7 @@
                     <span class="service-tag">Debian</span>
                     <span class="service-tag">Ubuntu</span>
                 </div>
-                <a href="#" class="card-arrow">
+                <a href="tarifs.html" class="card-arrow">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="white" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" />
@@ -277,7 +277,7 @@
                     <span class="service-tag">Raid</span>
                     <span class="service-tag">Мониторинг</span>
                 </div>
-                <a href="#" class="card-arrow">
+                <a href="dedicated-servers.html" class="card-arrow">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="white" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" />
@@ -294,7 +294,7 @@
                     <span class="service-tag">Фильтрация</span>
                     <span class="service-tag">WAF</span>
                 </div>
-                <a href="#" class="card-arrow">
+                <a href="tarifs.html" class="card-arrow">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="white" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" />
@@ -312,7 +312,7 @@
                     <span class="service-tag">photos</span>
                     <span class="service-tag">your extra large files</span>
                 </div>
-                <a href="#" class="card-arrow">
+                <a href="storage_vps.html" class="card-arrow">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="white" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" />
@@ -329,7 +329,7 @@
                     <span class="service-tag">Intel Core i9</span>
                     <span class="service-tag">High Performance</span>
                 </div>
-                <a href="#" class="card-arrow">
+                <a href="high_cpu.html" class="card-arrow">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="white" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" />
@@ -440,29 +440,29 @@
         <div class="modal-content">
             <div class="modal-left">
                 <img src="./Images/logo.svg" alt="Logo" class="modal-logo">
-                <h2>Login System</h2>
-                <p>Login into your Account</p>
+                <h2>Система входа</h2>
+                <p>Войдите в свой аккаунт</p>
             </div>
             <div class="modal-right">
                 <div class="modal-header">
-                    <h2>Login Account</h2>
-                    <p>Sign in to continue your progress</p>
+                    <h2>Вход в аккаунт</h2>
+                    <p>Войдите в систему, чтобы продолжить</p>
                     <button class="modal-close">&times;</button>
                 </div>
                 <form class="modal-form">
                     <div class="form-group">
-                        <label for="studentId">Login</label>
+                        <label for="studentId">Логин</label>
                         <input type="text" id="studentId" name="studentId" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password">Пароль</label>
                         <input type="password" id="password" name="password" required>
                         <div class="password-toggle">
                             <input type="checkbox" id="showPassword">
-                            <label for="showPassword">Show password</label>
+                            <label for="showPassword">Показать пароль</label>
                         </div>
                     </div>
-                    <button type="submit" class="sign-in-btn">Sign in</button>
+                    <button type="submit" class="sign-in-btn">Войти</button>
                 </form>
             </div>
         </div>
@@ -472,18 +472,18 @@
         <div class="modal-content">
             <div class="modal-left">
                 <img src="./Images/logo.svg" alt="Logo" class="modal-logo">
-                <h2>Registration System</h2>
-                <p>Register your Account</p>
+                <h2>Система регистрации</h2>
+                <p>Зарегистрируйте свой аккаунт</p>
             </div>
             <div class="modal-right">
                 <div class="modal-header">
-                    <h2>Create Account</h2>
-                    <p>Fill in your details to get started</p>
+                    <h2>Создайте свой аккаунт</h2>
+                    <p>Введите свои данные, чтобы начать</p>
                     <button class="modal-close">&times;</button>
                 </div>
                 <form class="modal-form">
                     <div class="form-group">
-                        <label for="regStudentId">Username</label>
+                        <label for="regStudentId">Имя пользователя</label>
                         <input type="text" id="regStudentId" name="regStudentId" required>
                     </div>
                     <div class="form-group">
@@ -491,14 +491,14 @@
                         <input type="email" id="regEmail" name="regEmail" required>
                     </div>
                     <div class="form-group">
-                        <label for="regPassword">Password</label>
+                        <label for="regPassword">Пароль</label>
                         <input type="password" id="regPassword" name="regPassword" required>
                         <div class="password-toggle">
                             <input type="checkbox" id="showRegPassword">
-                            <label for="showRegPassword">Show password</label>
+                            <label for="showRegPassword">Показать пароль</label>
                         </div>
                     </div>
-                    <button type="submit" class="sign-in-btn">Create Account</button>
+                    <button type="submit" class="sign-in-btn">Создать аккаунт</button>
                 </form>
             </div>
         </div>
