--- a/high_cpu.html
+++ b/high_cpu.html
@@ -218,7 +218,7 @@
                     </div>
 
                     <div class="tariff-plans">
-                        <div class="plan" data-plan="ALB-1">
+                        <div class="plan animate-on-scroll" data-plan="ALB-1">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -235,7 +235,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-2">
+                        <div class="plan animate-on-scroll" data-plan="ALB-2">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -252,7 +252,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-3">
+                        <div class="plan animate-on-scroll" data-plan="ALB-3">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -269,7 +269,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-4">
+                        <div class="plan animate-on-scroll" data-plan="ALB-4">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -286,7 +286,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-5">
+                        <div class="plan animate-on-scroll" data-plan="ALB-5">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -332,7 +332,7 @@
                     </div>
 
                     <div class="tariff-plans">
-                        <div class="plan" data-plan="ALB-1">
+                        <div class="plan animate-on-scroll" data-plan="ALB-1">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -349,7 +349,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-2">
+                        <div class="plan animate-on-scroll" data-plan="ALB-2">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -366,7 +366,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-3">
+                        <div class="plan animate-on-scroll" data-plan="ALB-3">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -383,7 +383,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-4">
+                        <div class="plan animate-on-scroll" data-plan="ALB-4">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -400,7 +400,7 @@
                             </div>
                         </div>
 
-                        <div class="plan" data-plan="ALB-5">
+                        <div class="plan animate-on-scroll" data-plan="ALB-5">
                             <div class="bottom-left"></div>
                             <div class="bottom-right"></div>
                             <div class="plan-header">
@@ -484,34 +484,34 @@
         <section class="features-section">
             <h2 class="features-title">почему наши серверы?</h2>
             <div class="features-grid">
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 67.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 67.png');">
                     <div class="feature-content">
                         <h3>ddos-защита</h3>
                         <p>до 2 Тбит/с трафика очистки, до 600 Гбит/с тонкой фильтрации. Защита включена в стоимость и
                             работает постоянно</p>
                     </div>
                 </div>
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 68.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 68.png');">
                     <div class="feature-content">
                         <h3>почасовая оплата</h3>
                         <p>быстрые облачные серверы, масштабируются на лету. Заказывайте сколько хотите, платите только
                             за то, что нужно</p>
                     </div>
                 </div>
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 69.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 69.png');">
                     <div class="feature-content">
                         <h3>современное оборудование</h3>
                         <p>современные процессоры AMD Ryzen, накопители в RAID до 10 Гбит/с и NVMe-SSD</p>
                     </div>
                 </div>
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 70.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 70.png');">
                     <div class="feature-content">
                         <h3>простое управление и API</h3>
                         <p>создание и работа с серверами в личном кабинете. Автоматизация управления с помощью REST API
                             и удобная документация</p>
                     </div>
                 </div>
-                <div class="feature-card" style="background-image: url('Images/Rectangle\ 71.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 71.png');">
                     <div class="feature-content">
                         <h3>резервное копирование</h3>
                         <p>будьте спокойны за сохранность своих данных. Резервное копирование доступно в пару кликов и
@@ -523,7 +523,7 @@
         <section class="faq-section">
             <h2 class="faq-title">вопросы, ответы</h2>
             <div class="faq-container">
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Есть ли тестовый период?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -538,7 +538,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Какая используется виртуализация?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -551,7 +551,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Для каких задач подойдут серверы High CPU?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -567,7 +567,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Есть ли DDoS-защита?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -583,7 +583,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Есть ли оверселлинг на тарифах High CPU?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -598,7 +598,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Помогаете ли вы с переносом сайтов?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -612,7 +612,7 @@
                     </div>
                 </div>
 
-                <div class="faq-item">
+                <div class="faq-item animate-on-scroll">
                     <div class="faq-question">
                         <span>Можно ли установить свою ОС?</span>
                         <svg class="arrow-icon" width="24" height="24" viewBox="0 0 24 24">
@@ -684,57 +684,56 @@
     <script src="scripts/main.js"></script>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/high-cpu-animations.js"></script>
+    <script src="./scripts/scrollAnim.js"></script>
 
-    <!-- Модальное окно для входа -->
-    <div class="modal" id="loginModal">
+    <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-left">
-                <img src="Images/logo.svg" alt="Logo" class="modal-logo">
-                <h2>Login System</h2>
-                <p>Login into your Account</p>
+                <img src="./Images/logo.svg" alt="Logo" class="modal-logo">
+                <h2>Система входа</h2>
+                <p>Войдите в свой аккаунт</p>
             </div>
             <div class="modal-right">
                 <div class="modal-header">
-                    <h2>Login Account</h2>
-                    <p>Sign in to continue your progress</p>
+                    <h2>Вход в аккаунт</h2>
+                    <p>Войдите в систему, чтобы продолжить</p>
                     <button class="modal-close">&times;</button>
                 </div>
                 <form class="modal-form">
                     <div class="form-group">
-                        <label for="studentId">Login</label>
+                        <label for="studentId">Логин</label>
                         <input type="text" id="studentId" name="studentId" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="password">Пароль</label>
                         <input type="password" id="password" name="password" required>
                         <div class="password-toggle">
                             <input type="checkbox" id="showPassword">
-                            <label for="showPassword">Show password</label>
+                            <label for="showPassword">Показать пароль</label>
                         </div>
                     </div>
-                    <button type="submit" class="sign-in-btn">Sign in</button>
+                    <button type="submit" class="sign-in-btn">Войти</button>
                 </form>
             </div>
         </div>
     </div>
 
-    <!-- Модальное окно для регистрации -->
-    <div class="modal" id="registerModal">
+    <div id="registerModal" class="modal">
         <div class="modal-content">
             <div class="modal-left">
-                <img src="Images/logo.svg" alt="Logo" class="modal-logo">
-                <h2>Registration System</h2>
-                <p>Register your Account</p>
+                <img src="./Images/logo.svg" alt="Logo" class="modal-logo">
+                <h2>Система регистрации</h2>
+                <p>Зарегистрируйте свой аккаунт</p>
             </div>
             <div class="modal-right">
                 <div class="modal-header">
-                    <h2>Create Account</h2>
-                    <p>Fill in your details to get started</p>
+                    <h2>Создайте свой аккаунт</h2>
+                    <p>Введите свои данные, чтобы начать</p>
                     <button class="modal-close">&times;</button>
                 </div>
                 <form class="modal-form">
                     <div class="form-group">
-                        <label for="regStudentId">Username</label>
+                        <label for="regStudentId">Имя пользователя</label>
                         <input type="text" id="regStudentId" name="regStudentId" required>
                     </div>
                     <div class="form-group">
@@ -742,14 +741,14 @@
                         <input type="email" id="regEmail" name="regEmail" required>
                     </div>
                     <div class="form-group">
-                        <label for="regPassword">Password</label>
+                        <label for="regPassword">Пароль</label>
                         <input type="password" id="regPassword" name="regPassword" required>
                         <div class="password-toggle">
                             <input type="checkbox" id="showRegPassword">
-                            <label for="showRegPassword">Show password</label>
+                            <label for="showRegPassword">Показать пароль</label>
                         </div>
                     </div>
-                    <button type="submit" class="sign-in-btn">Create Account</button>
+                    <button type="submit" class="sign-in-btn">Создать аккаунт</button>
                 </form>
             </div>
         </div>
