--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <section class="hero">
             <div class="hero-video-container">
                 <video class="hero-background-video" autoplay loop muted playsinline>
-                    <source src="./videos/cloudvps_video_background (1).mp4" type="video/mp4">
+                   <source src="./videos/cloudvps_video_background (1).mp4" type="video/mp4">>
                 </video>
                 <div class="video-overlay"></div>
             </div>
